--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "nodemon server",
+    "seed" : "node seed-data"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@apollo/server": "^4.11.3",
+    "axios": "^1.7.9",
     "express": "^4.21.2",
+    "graphql": "^16.10.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.4",
     "nodemon": "^3.1.9"
   }
 }
